# atomicx

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  run_migration.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_variable_engine.py  003_pattern_library.py  004_learning_persistence.py  005_autonomous_evolution.py  006_news_intelligence.py  007_causality_tracking.py  008_liquidations_cvd.py  009_portfolio_system.py  010_multi_asset_support.py  011_agi_proposal_fields.py
config/: m3_8gb_optimized.yaml
docs/: ARCHITECTURE_DEEP_DIVE.md  example_domains.py
scripts/: backfill_historical.py  ingest_data.py  memory_monitor.py  run_pipeline.py
src/atomicx/: __init__.py  config.py
src/atomicx/agents/: __init__.py  base.py  lane_queue.py  orchestrator.py  signals.py
src/atomicx/agi/: autonomous_research.py
src/atomicx/api/: __init__.py
src/atomicx/brain/: __init__.py  chatbot.py  chatbot_agent.py  debate.py  decider.py  evolver.py  llm_profiles.py  loop.py  orchestrator.py  persistence.py  reflector.py
src/atomicx/causal/: __init__.py  algorithms.py  discovery.py  engine.py  types.py
src/atomicx/common/: __init__.py  cache.py  hardware.py  json_utils.py  logging.py  sentiment.py
src/atomicx/dashboard/: app.py  god_mode_api.py  god_mode_cache.py  portfolio_api.py
src/atomicx/data/: __init__.py  asset_manager.py  backfill.py  batch_manager.py  ingestion.py  pattern_verification.py  pipeline.py  startup.py
src/atomicx/evolution/: __init__.py  code_evolution.py  config_manager.py  engine.py  meta_learning.py  self_improvement.py
src/atomicx/execution/: __init__.py  manager.py  monitor.py  orchestrator.py  receiver.py
src/atomicx/fusion/: __init__.py  dual_confirm.py  engine.py  prediction.py  regime.py
src/atomicx/guardrails/: __init__.py
src/atomicx/intelligence/: __init__.py  browser_agent.py  browser_pool.py  impact.py  knowledge_graph.py  news_intelligence.py  scanner.py
src/atomicx/memory/: __init__.py  causal_rl.py  evolution.py  genome.py  orchestrator.py  pruner.py  regime_trigger.py  service.py  tiers.py  wiki.py
src/atomicx/microstructure/: __init__.py  orderbook.py
src/crucix/: .env.example  Dockerfile  SECURITY.md  crucix.config.mjs  diag.mjs  server.mjs
tests/causal/: README.md
(+119 files in other folders)
