[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomicx"
version = "0.1.0"
description = "Causal Intelligence Engine — Universal Reality Modeling and Prediction Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AtomicX Team" }
]
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Data Processing
    "polars>=1.20.0",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "numba>=0.60.0",  # JIT compilation for high-performance loops
    "psutil>=6.1.0",  # System monitoring for hardware optimization

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # Redis
    "redis>=5.2.0",

    # Kafka
    "aiokafka>=0.12.0",

    # Crypto Exchange API
    "ccxt>=4.4.0",

    # HTTP Client
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",

    # Traditional Finance (Stocks/Commodities)
    "yfinance>=0.2.36",

    # Logging
    "loguru>=0.7.3",

    # Configuration
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",

    # RSS Feed Parsing (intelligence scanner)
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.5.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "transformers>=4.47.0",
    "sentence-transformers>=3.3.0",
]
causal = [
    "dowhy>=0.11.0",
    "causal-learn>=0.1.3",
    "gcastle>=1.0.3",
    "econml>=0.15.0",
]
agents = [
    "langgraph>=0.2.60",
    "langchain>=0.3.12",
    "langchain-aws>=0.2.0",
]
vector = [
    "qdrant-client>=1.12.0",
    "mem0ai>=0.1.0",
]
social = [
    "praw>=7.8.0",
    "pytrends>=4.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "httpx>=0.28.0",
]
all = [
    "atomicx[ml,causal,agents,vector,social,dev]",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
